# Forculus-Gamboge

./: .gitignore  README.md
admin_node/: CMakeLists.txt  prj.conf  run_task_admin.sh
admin_node/include/: esp32_wifi_connect.h  lvgl_display.h  mqtt_client.h
admin_node/lib/: esp32_wifi_connect.c  lvgl_display.c  mqtt_client.c
admin_node/src/: main.c
auth/: README.md  blockchain_logger.py  blockchain_manual.py  config.py  main.py  models.py  requirements.txt  sensor_store.py  serial_manager.py
base_node/: CMakeLists.txt  prj.conf  run_task.sh
base_node/boards/: nrf52dk_nrf52832.overlay
base_node/include/: CLIshell.h  baseBluetooth.h  localVariables.h  servo.h
base_node/lib/: CLIshell.c  baseBluetooth.c  servo.c
base_node/src/: main.c
base_sensor/: CMakeLists.txt  prj.conf
display_node/: CMakeLists.txt  prj.conf  run_task.sh  run_task_disco.sh  run_task_nrf2.sh
door_node/: CMakeLists.txt  prj.conf  run_task.sh
door_node/boards/: disco_l475_iot1.overlay
door_node/include/: doorBluetooth.h  globalVariables.h  lis3mdl.h  localVariables.h  m24sr64.h  pmodkypd.h  ultrasonicSensor.h
door_node/lib/: doorBluetooth.c  globalVariables.c  lis3mdl.c  localVariables.c  m24sr64.c  pmodkypd.c  ultrasonicSensor.c
door_node/src/: main.c
door_node/sysbuild/: mcuboot.conf
facial_recognition/: authenticate_pi.py  authenticate_windows.py  detect_and_crop.py  embeddings_fnet.pkl  export_fnet_ts.py  extract_frames.py  face_recognizer_svm.pkl  generate_embeddings.py  prune_model.py  quantize_fnet.py  requirements.txt  test_pipeline.py  train_classifier.py  visualize_embeddings.py
include/: rxBluetooth.h  txBluetooth.h
lib/: rxBluetooth.c  txBluetooth.c
mobile_sensor/: CMakeLists.txt  prj.conf  readme.md  (+1 more)
(+11 files in other folders)
